[package]
name = "bellperson-nonnative"
version = "0.4.0"
description = "Non-native arithmetic for SNARKs"
documentation = "https://docs.rs/bellperson-nonnative"
license-file = "LICENSE"
keywords = ["zkSNARKs", "cryptography", "proofs"]
edition = "2021"

[dependencies]
rand = { version = "0.8", default-features = false }
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2"
num-integer = "0.1"
bellperson = { version = "0.24", default-features = false }
ff = { version = "0.12", features = ["derive"] }
byteorder = "0.3.0"

[features]
default = []

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
